# music-timbre-transfer

./: .gitignore  README.md  pyproject.toml  train.ipynb
config/: data_config.yaml
demo/: demo.md
notebook/: generate_data.ipynb
notebook-from-colab/: project2_eval (1).ipynb  project2_eval.ipynb  project2_flute.ipynb  project2_guitar.ipynb  project2_piano.ipynb
src/: audio_wrapper.py  dataset.py  evaluation.py  generate_spectrogram.py  inference.py  ismir2024.py  lora_module.py  train.py  train_config.py  utils.py
utils/: audio_wrapper.py
