[project]
name = "project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "numpy",
    "pandas>=3.0.3",
    "pydot>=4.0.1",
    "python-dotenv>=1.2.2",
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "tqdm>=4.67.3",
    "onnxscript>=0.7.0",
    "torchviz>=0.0.3",
    "midi2audio>=0.1.1",
    "pretty-midi>=0.2.11",
    "diffusers>=0.37.1",
    "transformers>=5.8.1",
    "accelerate>=1.13.0",
    "torchvision>=0.26.0",
    "torchcodec>=0.12.0",
    "huggingface-hub>=1.15.0",
    "peft>=0.19.1",
    "gin>=0.1.6",
    "gin-config>=0.5.0",
    "cached-conv>=2.5.0",
    "einops-exts>=0.0.4",
    "tensorboard>=2.20.0",
    "torch-ema>=0.3",
    "cqt-pytorch>=0.0.5",
    "nnaudio>=0.3.4",
]
